--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
 	<title>mon cv</title>
     </head>
     <body>
-
+	<div id="contenu_de_la_page">
+	    <div id="identite">
+		Archi combo <br />
+		20 Grande rue Nazareth <br />
+		31000 Toulouse <br />
+		moi@gmail.com <br />
+		00.00.00.00.00 <br />
+	    </div>
+	    <section>
+		<div id="competance">
+		    <h2>COMPÉTANCE</h2>
+		    HTML5 - CSS3 <br />
+		    PHP - MySql <br />
+		    GIT - GITHUB <br />
+		</div>
+		<div id="experience">
+		    <h2>EXPÉRIENCE</h2>
+		    Création d'un site Web - Chez moi ;)
+		</div>
+		<div id="formation">
+		    <h2>FORMATION</h2>
+		    2014 - aujourd'hui : Cours d'informatique en ligne - <a href="www.openclassrooms.com>openclassrooms</a><br />
+		    2014 - aujourd'hui : BAC STI2D SIN - Gréta Toulouse <br />
+		    2013 - 2014 : Technicien d'équipement en électricité - Adrar Toulouse <br />
+		</div>
+	    </section>
+	</div>
     </body>
 </html>
