inclusion du fichier CSS dans la page HTML

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 	<meta charset="utf-8" />
+	<link rel="stylesheet" href="style.css" />
 	<title>mon cv</title>
     </head>
     <body>
@@ -26,7 +27,7 @@
 		</div>
 		<div id="formation">
 		    <h2>FORMATION</h2>
-		    2014 - aujourd'hui : Cours d'informatique en ligne - <a href="www.openclassrooms.com>openclassrooms</a><br />
+		    2014 - aujourd'hui : Cours d'informatique en ligne - <a href="http://www.openclassrooms.com">openclassrooms</a><br />
 		    2014 - aujourd'hui : BAC STI2D SIN - Gréta Toulouse <br />
 		    2013 - 2014 : Technicien d'équipement en électricité - Adrar Toulouse <br />
 		</div>
