rajout des liste à puce

--- a/index.html
+++ b/index.html
@@ -17,19 +17,25 @@
 	    <section>
 		<div id="competance">
 		    <h2>COMPÉTANCE</h2>
-		    HTML5 - CSS3 <br />
-		    PHP - MySql <br />
-		    GIT - GITHUB <br />
+		    <ul>
+			<li>HTML5 - CSS3 </li>
+		    	<li>PHP - MySql </li>
+		    	<li>GIT - GITHUB </li>
+		    </ul>
 		</div>
 		<div id="experience">
 		    <h2>EXPÉRIENCE</h2>
-		    Création d'un site Web - Chez moi ;)
+		    <ul>
+			<li>Création d'un site Web - Chez moi ;)</li>
+		    </ul>
 		</div>
 		<div id="formation">
 		    <h2>FORMATION</h2>
-		    2014 - aujourd'hui : Cours d'informatique en ligne - <a href="http://www.openclassrooms.com">openclassrooms</a><br />
-		    2014 - aujourd'hui : BAC STI2D SIN - Gréta Toulouse <br />
-		    2013 - 2014 : Technicien d'équipement en électricité - Adrar Toulouse <br />
+		    <ul>
+		   	<li> 2014 - aujourd'hui : Cours d'informatique en ligne - <a href="http://www.openclassrooms.com">openclassrooms</a></li>
+		    	<li>2014 - aujourd'hui : BAC STI2D SIN - Gréta Toulouse </li>
+		   	<li> 2013 - 2014 : Technicien d'équipement en électricité - Adrar Toulouse </li>
+		    </ul>
 		</div>
 	    </section>
 	</div>
