ajout d'une photo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		moi@gmail.com <br />
 		00.00.00.00.00 <br />
 	    </div>
+	    <div id="photo">
+		<img rel="lion.jpg" alt="image" />
+	    </div>
 	    <section>
 		<div id="competance">
 		    <h2>COMPÉTANCE</h2>
