dimension du photo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		00.00.00.00.00 <br />
 	    </div>
 	    <div id="photo">
-		<img src="lion.jpg" alt="image" />
+		<img src="lion.jpg" alt="image" width="150px" height="150px" />
 	    </div>
 	    <section>
 		<div id="competance">
